...
            .accessibilityIdentifier("ContentViewZStack") // FIXME: проверить в UI тестах работает или нет
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: { PDFService(dataStore: dataStore).sharePDF() }) {
                        Image(systemName: "square.and.arrow.up")
                    }
                    .accessibilityIdentifier("ExportPDFButton")
                }
            }
            .navigationTitle("Дневник сахара")
            .onAppear {
                print("locale: \(locale)")
                print("isLongTimeFormat: \(isLongTimeFormat)")
            }
        }
        .accessibilityIdentifier("MainNavigationView")
...
