...
                    .padding(.top, 5)
                    .padding(.bottom, 6)
                }
                .accessibilityIdentifier("DaySection-\(day.timeIntervalSince1970)")
            }
        }
        .accessibilityIdentifier("RecordsList")
    }
    
    private func dayHeaderView(for day: Date) -> some View {
        HStack {
            Image(systemName: "calendar")
            dayHeaderText(for: day)
...
